--- a/exercises/05-Sidebar-With-Menu/index.html
+++ b/exercises/05-Sidebar-With-Menu/index.html
@@ -14,5 +14,29 @@
 
 	<body>
 		<!-- your code here, rememeber to wrap everything into a container-fluid -->
+
+		<div class="container-fluid">
+			<div class="col-4">
+				<ul class="nav flex-column">
+					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="#">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Profile</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Messages</a>
+					</li>
+				</ul>
+			</div>
+			<div class="jumbotron col-8">
+				<h1 class="display-4">Hello!</h1>
+				<p class="lead">
+					Im excite to use bootstrap because now I dont have to fight with CSS anymore, I made this layout in 20 minutes before bootstrap it
+					took me 2hrs easy!
+				</p>
+				<a class="btn btn-primary btn-lg" href="#" role="button">Click me!!</a>
+			</div>
+		</div>
 	</body>
 </html>
