--- a/exercises/06-Jumbotron-And-Three-Boxes/index.html
+++ b/exercises/06-Jumbotron-And-Three-Boxes/index.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+			crossorigin="anonymous"
+		/>
+		<title>06 Jumbotron And 3 Boxes</title>
+	</head>
 
-<head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width" />
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-	<title>06 Jumbotron And 3 Boxes</title>
-</head>
+	<body>
+		<div class="container-fluid">
+			<div class="jumbotron">
+				<h1 class="display-4">Hello, world!</h1>
+				<p class="lead">
+					This is a template for a simple marketing or informational website. Its includes a large callout called a jumbotron and three
+					supporting pieces of content. Use it as a starting point to create something more unique.
+				</p>
+				<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+			</div>
 
-<body>
-
-</body>
-
+			<div class="row">
+				<div class="col-4">
+					<h2>Heading</h2>
+					<br />
+					1-This is a template for a simple marketing or informational website. Its includes a large callout called a jumbotron and three
+					supporting pieces of content. Use it as a starting point to create something more unique.<br /><br />
+					<button type="button" class="btn btn-outline-secondary">View details ></button>
+				</div>
+				<div class="col-4">
+					<h2>Heading</h2>
+					<br />
+					2-This is a template for a simple marketing or informational website. Its includes a large callout called a jumbotron and three
+					supporting pieces of content. Use it as a starting point to create something more unique.<br /><br />
+					<button type="button" class="btn btn-outline-secondary">View details ></button>
+				</div>
+				<div class="col-4">
+					<h2>Heading</h2>
+					<br />
+					3-This is a template for a simple marketing or informational website. Its includes a large callout called a jumbotron and three
+					supporting pieces of content. Use it as a starting point to create something more unique.<br /><br />
+					<button type="button" class="btn btn-outline-secondary">View details ></button>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
